fixed layout issues on seat selection and issues on posting the seat ids to reserve it properly

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -25,5 +25,5 @@
     box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
     border-radius: 3px;
     padding: 8px;
-    margin-bottom: 11px;
+    margin: 0px 5px 11px 5px;
 }
