--- a/src/Pages/Seats/Seats.css
+++ b/src/Pages/Seats/Seats.css
@@ -15,7 +15,8 @@
 .Seats .all-seats {
     width: 100%;
     height: 50%;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
     flex-wrap: wrap;
     justify-content: space-between;
 }
